— fixed broken only me posts link in timeline; — OK button also redirects to timeline anchor; — Edit button only shows for users who can edit;

--- a/app/assets/stylesheets/post/timeline.scss
+++ b/app/assets/stylesheets/post/timeline.scss
@@ -149,7 +149,7 @@ main.company > div.wrapper > div.posts {
       border: 3px solid hsl(0, 0%, 80%);
     }
 
-    > .only-me-overlay {
+    .only-me-overlay {
       @include align-items(center);
       @include display(flex);
       @include justify-content(center);
